# FBNeo

./: .cnb.yml  .editorconfig  .gitignore  .gitlab-ci.yml  GAMELIST.md  LICENSE.md  README-PI.md  README-SDL.md  README-macOS.md  README.md  appveyor.yml  appveyor.yml.ignore  cc.patch  compile_libretro.sh  d_cps2.cpp  d_neogeo.cpp  d_nes.cpp  fba.chm  gamelist.txt  games.bat  generate_files.sh  makefile  makefile.burn_rules  makefile.burner_pi_rules  makefile.burner_win32_rules  makefile.libretro  makefile.libsnes  makefile.mamemingw  makefile.mingw  makefile.pi  makefile.rules  makefile.sdl  makefile.sdl2  makefile.sdlrules  makefile.vc  makefile.vc18  makefile.win32_rules  meson.build  meson_options.txt  mobasuite.vcxproj  (+2 more)
src/burn/: bitswap.h  burn.cpp  burn.h  burn_bitmap.cpp  burn_bitmap.h  burn_endian.h  burn_gun.cpp  burn_gun.h  burn_led.cpp  burn_led.h  burn_memory.cpp  burn_pal.cpp  burn_pal.h  burn_sha1.cpp  burn_shift.cpp  burn_shift.h  burn_sound.cpp  burn_sound.h  burn_sound_c.cpp  burnint.h  cheat.cpp  cheat.h  debug_track.cpp  driver.h  driverlist_manifest.txt.in  hiscore.cpp  hiscore.h  joyprocess.cpp  load.cpp  meson.build  state.h  stdfunc.h  tilemap_generic.cpp  tilemap_generic.h  tiles_generic.cpp  tiles_generic.h  timer.cpp  timer.h  vector.cpp  vector.h  (+1 more)
src/burn/devices/: 6821pia.cpp  6821pia.h  6840ptm.cpp  6840ptm.h  74259.cpp  74259.h  8255ppi.cpp  8255ppi.h  8257dma.cpp  8257dma.h  ad59mc07.cpp  ad59mc07.h  alpha8201.cpp  alpha8201.h  atariic.cpp  atariic.h  atarijsa.cpp  atarijsa.h  atarimo.cpp  atarimo.h  atarirle.cpp  atarirle.h  atarivad.cpp  atarivad.h  atmel_arm_aic.cpp  atmel_arm_aic.h  avgdvg.cpp  avgdvg.h  bsmt2000.cpp  bsmt2000.h  c169.cpp  c169.h  decobsmt.cpp  decobsmt.h  ds2404.cpp  ds2404.h  dtimer.cpp  dtimer.h  earom.cpp  earom.h  (+111 more)
src/burn/drivers/: d_parent.cpp
src/burn/drv/: d_parent.cpp  meson.build
src/burn/snd/: asteroids.cpp  asteroids.h  astrocde_snd.cpp  astrocde_snd.h  ay8910.c  ay8910.h  beep.cpp  beep.h  biquad.h  burn_md2612.cpp  burn_md2612.h  burn_y8950.cpp  burn_y8950.h  burn_ym2151.cpp  burn_ym2151.h  burn_ym2203.cpp  burn_ym2203.h  burn_ym2413.cpp  burn_ym2413.h  burn_ym2608.cpp  burn_ym2608.h  burn_ym2610.cpp  burn_ym2610.h  burn_ym2612.cpp  burn_ym2612.h  burn_ym3526.cpp  burn_ym3526.h  burn_ym3812.cpp  burn_ym3812.h  burn_ymf262.cpp  burn_ymf262.h  burn_ymf271.cpp  burn_ymf271.h  burn_ymf278b.cpp  burn_ymf278b.h  bzone.cpp  bzone.h  c140.cpp  c140.h  c352.cpp  (+131 more)
src/burn/sound/: ay8910.c  burn_y8950.cpp  burn_y8950.h  burn_ym2151.cpp  burn_ym2151.h  burn_ym2203.cpp  burn_ym2203.h  burn_ym2413.cpp  burn_ym2413.h  burn_ym2608.cpp  burn_ym2608.h  burn_ym2610.cpp  burn_ym2610.h  burn_ym2612.cpp  burn_ym2612.h  burn_ym3526.cpp  burn_ym3526.h  burn_ym3812.cpp  burn_ym3812.h  burn_ymf278b.cpp  dac.cpp  es5506.cpp  es8712.cpp  fmopl.c  ics2115.cpp  iremga20.cpp  k007232.cpp  k051649.cpp  k051649.h  k053260.cpp  k054539.cpp  msm5205.cpp  msm6295.cpp  msm6295.h  namco_snd.cpp  rf5c68.cpp  rf5c68.h  saa1099.cpp  samples.cpp  segapcm.cpp  (+7 more)
src/burner/: burner.h  conc.cpp  cong.cpp  dat.cpp  dynhuff.cpp  dynhuff.h  gamc.cpp  gameinp.h  gami.cpp  image.cpp  inputbuf.cpp  inputbuf.h  ioapi.c  ioapi.h  luaengine.cpp  luaengine.h  luasav.cpp  luasav.h  meson.build  misc.cpp  neocdlist.h  neocdlist_games.h  nvram.cpp  sshot.cpp  state.cpp  statec.cpp  title.h  un7z.cpp  un7z.h  unzip.c  unzip.h  zipfn.cpp
src/burner/libretro/: Makefile  Makefile.common  Makefile.neogeo  README.md  burn_endian.h  burn_libretro_opts.h  burner_libretro.h  libretro.cpp  neocdlist.cpp  retro_cdemu.cpp  retro_cdemu.h  retro_common.cpp  retro_common.h  retro_input.cpp  retro_input.h  retro_memory.cpp  retro_memory.h  tchar.h  ugui_tools.c  ugui_tools.h
src/burner/libsnes/: archive.cpp  archive.h  generate_files.sh  libsnes.cpp  tchar.h
src/burner/macos/: FBEmulator.h  FBEmulator.mm  FBImporter.h  FBImporter.m  FBMainThread+Etc.h  FBMainThread+Etc.mm  FBMainThread.h  FBMainThread.mm  FBScanner.h  FBScanner.mm  NSString+Etc.h  NSString+Etc.m  burner_macos.h  inpdipsw.cpp  main.cpp  main.h  meson.build  misc.cpp  tchar.h
src/burner/pi/: config.h  config_pi.cpp  main_pi.cpp  meson.build  run_pi.cpp
src/burner/psp/: config.cpp  meson.build
src/burner/qt/: aboutdialog.cpp  aboutdialog.ui  burner_qt.h  dipswitchdialog.cpp  dipswitchdialog.h  dipswitchdialog.ui  emuworker.h  inputdialog.cpp  inputdialog.h  inputsetdialog.cpp  inputsetdialog.h  inputsetdialog.ui  logdialog.h  logdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  neocdlist.cpp  oglviewport.h  progress.cpp  qaudiointerface.cpp  qaudiointerface.h  qinputinterface.cpp  qinputinterface.h  qrubyviewport.cpp  qrubyviewport.h  qutil.cpp  qutil.h  romdirsdialog.cpp  romdirsdialog.h  rominfodialog.cpp  romscandialog.cpp  romscandialog.h  romscandialog.ui  rscr.qrc  selectdialog.cpp  selectdialog.h  selectdialog.ui  supportdirsdialog.cpp  (+2 more)
src/burner/resource/: manifest.xml
src/burner/sdl/: burner_sdl.h  bzip.cpp  bzip.txt  cfgpath.h  config.cpp  drv.cpp  inpdipsw.cpp  input.cpp  input_sdl.cpp  input_sdl2.cpp  ips_manager.cpp  localise_gamelist.cpp  main.cpp  media.cpp  meson.build  misc_image.h  neocdlist.cpp  replay.cpp  romdata.cpp  run.cpp  scrn.cpp  sdl2_gui.cpp  sdl2_gui.h  sdl2_gui_common.cpp  sdl2_gui_common.h  sdl2_gui_ingame.cpp  sdl2_inprint.cpp  sdl2_inprint.h  stated.cpp  stringset.cpp  support_paths.cpp  tchar.h
src/burner/win32/: RCa08080  RCa57684  RCc57684  about.cpp  (+64 more)
src/cpu/: adsp2100_intf.cpp  adsp2100_intf.h  arm7_intf.cpp  arm7_intf.h  arm946es_intf.cpp  arm946es_intf.h  arm9_intf.cpp  arm9_intf.h  arm_intf.cpp  arm_intf.h  burnmap.cpp  burnmap.h  burnmapcore.h  c68000_intf.cpp  e132xs_intf.h  h6280_intf.cpp  h6280_intf.h  hd6309_intf.cpp  hd6309_intf.h  i386_intf.h  i8085_intf.h  konami_intf.cpp  konami_intf.h  m377_intf.h  m6502_intf.cpp  m6502_intf.h  m68000_debug.h  m68000_intf.cpp  m68000_intf.h  m6800_intf.cpp  m6800_intf.h  m6805_intf.cpp  m6805_intf.h  m6809_intf.cpp  m6809_intf.h  mb88xx_intf.h  meson.build  mips3_intf.cpp  mips3_intf.h  nec_intf.cpp  (+27 more)
(+2637 files in other folders)
