option('frontend',
    type: 'combo',
    choices: ['auto', 'sdl2', 'win32', 'qt', 'macos', 'pi', 'psp'],
    value: 'auto',
    description: 'Frontend implementation to build')
option('include_7z', type: 'boolean', value: true, description: 'Include 7-zip archive support')
option('force_pulse_audio', type: 'boolean', value: false, description: 'Use PulseAudio simple backend')
option('rom_verify', type: 'boolean', value: false, description: 'Include ROM set verification features')
option('fastcall_support',
    type: 'boolean',
    value: true,
    description: 'Use the __fastcall calling convention when interfacing with A68K/Musashi/Doze')
option('driver_list',
    type: 'array',
    value: [
        'atari',
        'capcom',
        'cave',
        'channelf',
        'coleco',
        'cps3',
        'dataeast',
        'galaxian',
        'irem',
        'konami',
        'megadrive',
        'midway',
        'msx',
        'neogeo',
        'nes',
        'pce',
        'pgm',
        'pgm2',
        'pre90s',
        'psikyo',
        'pst90s',
        'sega',
        'sg1000',
        'sms',
        'snes',
        'spectrum',
        'taito',
        'toaplan',
    ],
    description: 'Drivers to build: group (capcom), driver (capcom/d_cps1.cpp), or exclusion (-capcom, -capcom/d_cps1.cpp)')
